<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_border"
    android:stretchColumns="0,1,2,3,4">

    <TableRow>


        <TextView
            android:id="@+id/Table_fragment_tytul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tytul_table_column"
            android:gravity="center_horizontal"
            android:background="@drawable/background_border"
            />


        <TextView
            android:id="@+id/Table_fragment_imie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imie_table_column"
            android:gravity="center_horizontal"
            android:background="@drawable/background_border"
            />

        <TextView
            android:id="@+id/Table_fragment_nazwisko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nazwisko_table_column"
            android:gravity="center_horizontal"
            android:background="@drawable/background_border"
            />

        <TextView
            android:id="@+id/Table_fragment_katedra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/katedra_table_column"
            android:gravity="center_horizontal"
            android:background="@drawable/background_border"
            />

        <TextView
            android:id="@+id/Table_fragment_kurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kurs_table_column"
            android:gravity="center_horizontal"
            android:background="@drawable/background_border"
           />
    </TableRow>

</TableLayout>